<resources>
    <string name="app_name">BojanglesApp</string>
    <string name="submit_label">Submit</string>
    <string name="not_you">Not your account?</string>
    <string name="edit">Submit Edit</string>
    <string name="payment_label">Credit Card Number:</string>
    <string name="cancel_label">Cancel</string>
    <string name="name_label">Full Name:</string>
    <string name="Reward_label">BoWards Points:</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="logout_label">Logout</string>
    <string name="create_account_label">Create New Account</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="no_account_prompt">Don\'t have an account?</string>
    <string name="menu_label">Menu</string>
    <string name="nav_open">Open</string>
    <string name="error_label">Error</string>
    <string name="nav_close">Close</string>
    <string name="my_account_label">My Account</string>
    <string name="edit_account_label">Edit Account</string>
    <string name="empty_prompt">Please enter all fields even if they are not being changed</string>
    <string name="document_menu">hOFJHyDCAuo4rlw6gWTc</string>
    <string name="document_single_items">Ew10njX7C7COsHEBDdKk</string>
    <string name="shopping_cart_label">Shopping Cart</string>
    <string name="calories_label">Calories:</string>
    <string name="ingredients_label">Ingredients:</string>
    <string name="price_label">$</string>
    <string name="add_to_cart_label">Add To Cart</string>
    <string name="check_out_label">Checkout</string>
    <string name="total_price_label">Total:</string>
    <string name="tax_label">Tax:</string>
    <string name="subtotal_label">Subtotal:</string>
    <string name="return_to_menu">Return To Menu</string>
    <string name="order_now">Order Now</string>
    <string name="points_gained">Points earned:</string>
    <string name="order_confirmed">Order Confirmed!</string>
    <string name="order_confirmed_label">Order Confirmation</string>
    <string name="order_placed">Order placed:</string>
    <string name="order_history">Order History</string>
    <string name="favorite">Favorite</string>
    <string name="return_to_order_history">Return To Order History</string>
    <string name="bojangles">Bojangles</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>